完成首页的设计

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div>
 </div>
-<div style="background-color: #0c0c0c">
+<div style="background-color: #191B1F">
   <div class="container">
     <div class="home-spacer"></div>
     <div class="row">
@@ -29,7 +29,7 @@
     </div>
     <div class="row">
       <div class="home-intro-spacer" style="border: none"></div>
-      <div class="col-lg-3 offset-lg-3" style="margin-top: 50px">
+      <div class="col-lg-3 offset-lg-3" style="margin-top: 30px">
         <a href="/cg_asia">
           <%= image_tag 'home/home_know_more.svg' %>
         </a>
@@ -42,6 +42,24 @@
       <div class="col-lg-8 home-intro-content">WSOP ASIA is presented by Certified Genius (HK) Limited. With HKD 30 million guaranteed prize pool and the world’s best in attendance we are extremely pleased to be hosting such a prestigious event for the first time in Macau, China. There’re a number of iconic hot events, and we also have Asian featured events. Players will be able to compete for high prizes and the gold bracelet that representing the highest glory of WSOP. We ensure that players of all levels can enjoy greatest pleasure in WSOP ASIA.
       </div>
     </div>
+    <div class="home-spacer"></div>
+
+    <div class="row">
+      <div class="col-lg-4 home-jump-item">
+        <%= image_tag 'home/event_zone.jpg', class: 'img-fluid' %>
+        <p>EVENT ZONE OF CG-ASIA</p>
+      </div>
+      <div class="col-lg-4 home-jump-item">
+        <%= image_tag 'home/latest_news.jpg', class: 'img-fluid' %>
+        <p>LATEST NEWS</p>
+      </div>
+      <div class="col-lg-4 home-jump-item">
+        <%= image_tag 'home/online_poker.png', class: 'img-fluid' %>
+        <p>ONLINE POKER</p>
+      </div>
+      </div>
+    </div>
+  
     <div class="home-spacer"></div>
   </div>
 </div>
