--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,11 +6,11 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav navbar-nav-cg ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">HOME</a>
+        <a class="nav-link" href="/">HOME</a>
         <div class="nav-link-active"></div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CG ASIA</a>
+        <a class="nav-link" href="/cg_asia">CG ASIA</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">TOURNAMENT</a>
