--- a/app/views/tournament/_main_event.html.erb
+++ b/app/views/tournament/_main_event.html.erb
@@ -62,10 +62,9 @@
       </div>
     </div>
     <%= render 'main_event_prize' %>
+    
     <div id="location" class="container tab-pane fade"><br>
-      <h3>Menu 2</h3>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-        aperiam.</p>
+      <%= sanitize @main_event.location_desc %>
     </div>
   </div>
 </div>
