--- a/app/views/tournament/_main_event_prize.html.erb
+++ b/app/views/tournament/_main_event_prize.html.erb
@@ -13,10 +13,15 @@
   </div>
 
   <div class="tab-content">
-      <% @main_event.prizes_in_mobile.each_with_index do |prize, i| %>
+    <% @main_event.prizes_in_mobile.each_with_index do |prize, i| %>
       <div id="<%= prize.name %>" class="tab-pane <%= 'active' if i == 0 %>">
-        <%= raw prize.prizes_table %>
+        <div class="tour-table prize-table">
+          <%= sanitize prize.prizes_table %>
+        </div>
       </div>
-      <% end %>
+    <% end %>
+  </div>
+  <div class="container" style="margin-top: 30px">
+    <%= sanitize @main_event.prize_desc %>
   </div>
 </div>
