--- a/app/views/tournament/_main_event_prize.html.erb
+++ b/app/views/tournament/_main_event_prize.html.erb
@@ -21,7 +21,7 @@
       </div>
     <% end %>
   </div>
-  <div class="container" style="margin-top: 30px">
+  <div class="container gc-html-container" style="margin-top: 30px">
     <%= sanitize @main_event.prize_desc %>
   </div>
 </div>
