完成main event的功能

--- a/app/views/admin/main_events/_form.html.haml
+++ b/app/views/admin/main_events/_form.html.haml
@@ -6,5 +6,6 @@
     = f.input :prize_pool
     = f.input :begin_time
     = f.input :end_time
-    = f.input :event_pdf 
+    = f.input :pdf_name
+    = f.input :event_pdf
   = f.submit data: { disable_with: '请稍等...' }
