--- a/app/assets/stylesheets/client/tournament.scss
+++ b/app/assets/stylesheets/client/tournament.scss
@@ -1,4 +1,3 @@
-@import "client/vars";
 .tournament{
   font-family: Helvetica;
 }
@@ -134,6 +133,7 @@
   .schedule-item{
     padding-bottom: 20px;
     padding-top: 20px;
+    max-width: 100%;
   }
 
   .schedule-title{
@@ -150,6 +150,8 @@
 .tour-table{
   padding: 0;
   background: rgba(32,34,37,1);
+
+  table{ width: 100%; }
 
   thead{
     background: rgba(245,206,133,1);
@@ -176,6 +178,26 @@
 .structure-table{
   th, td{
     padding-left: 35px;
+  }
+}
+
+.schedule-table{
+  th, td{
+    padding: 20px;
+  }
+
+  tbody tr:nth-child(odd) {
+    background:rgba(25,27,31,1);
+  }
+}
+
+.side-event-table{
+  th, td{
+    padding: 20px;
+  }
+
+  tbody tr:nth-child(odd) {
+    background:rgba(25,27,31,1);
   }
 }
 
