--- a/app/views/tournament/_main_event.html.erb
+++ b/app/views/tournament/_main_event.html.erb
@@ -1,4 +1,13 @@
-<div id="main_event" class=" tab-pane fade">
+<div id="main_event" class="tab-pane fade">
+  <div class="container main-event-label d-none">
+      MAIN EVENT.
+    <span class="main-event-pdf-download float-right">
+      <a href="<%= @main_event.event_pdf_url %>" target="_blank">
+        <%= image_tag 'download.png', height: 20 %>
+        <%= @main_event.pdf_name %>
+      </a>
+    </span>
+  </div>
   <div class="container">
     <ul class="nav nav-main-event nav-justified" role="tablist">
       <li class="nav-item">
@@ -21,23 +30,9 @@
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div id="schedule" class="tab-pane active main-event-schedule">
-      <% @main_event.event_schedules.each do |schedule| %>
-        <div class="row schedule-item">
-          <div class="col-3" style="padding-left: 45px; padding-right: 0">
-            <%= schedule.date_time.to_formatted_s(:short) %>
-          </div>
-          <div class="col-9">
-            <div class="schedule-title"><%= schedule.name %></div>
-            <div class="schedule-attr">Buyin: <%= schedule.buyin %></div>
-            <div class="schedule-attr">Chip: <%= schedule.chip %></div>
-            <div class="schedule-attr">Guarantee: <%= schedule.guarantee %></div>
-          </div>
-        </div>
-      <% end %>
-    </div>
+    <%= render 'main_event_schedule' %>
     <div id="structure" class="container tab-pane fade"><br>
-      <div class="row schedule-item">
+      <div class="row">
         <div class="col-lg-6 gc-html-container">
           <%= sanitize @main_event.structure_desc %>
         </div>
