--- a/app/views/tournament/_main_event_prize.html.erb
+++ b/app/views/tournament/_main_event_prize.html.erb
@@ -1,26 +1,32 @@
 <div id="prize" class="tab-pane fade">
-  <div style="padding: 0 30px">
-    <ul class="nav nav-justified nav-prizes" role="tablist">
+  <% if is_mobile? %>
+    <div style="padding: 0 30px">
+      <ul class="nav nav-justified nav-prizes" role="tablist">
+        <% @main_event.prizes_in_mobile.each_with_index do |prize, i| %>
+
+          <li class="nav-item">
+            <a class="nav-link <%= 'active' if i == 0 %>" data-toggle="pill" href="#<%= prize.name %>">
+              <%= prize.name %>
+            </a>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+
+    <div class="tab-content">
       <% @main_event.prizes_in_mobile.each_with_index do |prize, i| %>
-
-        <li class="nav-item">
-          <a class="nav-link <%= 'active' if i == 0 %>" data-toggle="pill" href="#<%= prize.name %>">
-            <%= prize.name %>
-          </a>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-
-  <div class="tab-content">
-    <% @main_event.prizes_in_mobile.each_with_index do |prize, i| %>
-      <div id="<%= prize.name %>" class="tab-pane <%= 'active' if i == 0 %>">
-        <div class="tour-table prize-table">
-          <%= sanitize prize.prizes_table %>
+        <div id="<%= prize.name %>" class="tab-pane <%= 'active' if i == 0 %>">
+          <div class="tour-table prize-table">
+            <%= sanitize prize.prizes_table %>
+          </div>
         </div>
-      </div>
-    <% end %>
-  </div>
+      <% end %>
+    </div>
+  <% else %>
+    <div class="container tour-table prize-table">
+      <%= sanitize @main_event.prizes_in_pc.prizes_table %>
+    </div>
+  <% end %>
   <div class="container gc-html-container" style="margin-top: 30px">
     <%= sanitize @main_event.prize_desc %>
   </div>
