--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,6 @@
     <%= render 'layouts/header' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
+    <%= image_tag 'back_to_top.png', height: 100, id: 'back_to_top' %>
   </body>
 </html>
