--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,9 +1,4 @@
-<div class="news-bg">
-  <div class="nes-bg-container">
-    <div class="container">NEWS</div>
-    <div class="news-bg-spacer"></div>
-  </div>
-</div>
+<%= render 'news_bg' %>
 
 <div class="news-content">
   <div class="container">
