--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -10,4 +10,17 @@
     </div>
     <div class="videos-loading d-none">LOADING…</div>
   </div>
+
+  <div class="videos-modal-over d-none"></div>
+  <div class="video-modal d-none">
+    <div class="video-close video-close-in-mobile d-lg-none">
+      <%= image_tag 'close_icon.png', height: 30 %>
+    </div>
+    <div class="video-container">
+      <div class="video-close video-close-in-pc d-none">
+        <%= image_tag 'close_icon.png', height: 30 %>
+      </div>
+      <div class="video-player-container"></div>
+    </div>
+  </div>
 </div>
