--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -8,6 +8,6 @@
     <div class="d-none1 news-pagination">
       <%= paginate @news %>
     </div>
-    <div class="news-loading d-none">LOADING…</div>
+    <div class="cg-loading d-none">LOADING…</div>
   </div>
 </div>
