--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
         <div class="<%= 'nav-link-active' if current_page?('/videos') %>"></div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/online_poker">ONLINE POKER</a>
+        <a class="nav-link" href="/online_pokers">ONLINE POKER</a>
         <div class="<%= 'nav-link-active' if current_page?('/online_poker') %>"></div>
       </li>
       <li class="nav-item dropdown">
