修改首页样式

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,67 +1,93 @@
-<div class="home-navbar-bg">
-  <div class="bg-content container">
-    <div class="bg-title">CERTIFIED GENIUS CORP(ASIA)</div>
-    <div class="bg-text">Focus on top global competitive games and
-      <span class="bg-text-spacer">surrounding entertainment services.</span>
+<div class="home-container">
+  <div class="home-navbar-bg">
+    <div class="bg-content container">
+      <div class="bg-title">CERTIFIED GENIUS CORP(ASIA)</div>
+      <div class="bg-text">Focus on top global competitive games and
+        <span class="bg-text-spacer">surrounding entertainment services.</span>
+      </div>
+      <div class="bg-icons">
+        <span style="margin-right: 20px">
+          <a href="https://www.facebook.com/CGASIATEAM/" target="_blank">
+            <%= image_tag 'home/facebook_icon.png', height: 36 %>
+          </a>
+        </span>
+        <span>
+          <a href="https://twitter.com/CGASIATEAM" target="_blank">
+          <%= image_tag 'home/twitter_icon.png', height: 36 %>
+          </a>
+        </span>
+      </div>
     </div>
-    <div class="bg-icons">
-      <span style="margin-right: 20px">
-        <a href="https://www.facebook.com/CGASIATEAM/" target="_blank">
-          <%= image_tag 'home/facebook_icon.png', height: 36 %>
-        </a>
-      </span>
-      <span>
-        <a href="https://twitter.com/CGASIATEAM" target="_blank">
-        <%= image_tag 'home/twitter_icon.png', height: 36 %>
-        </a>
-      </span>
+  </div>
+  <div style="background-color: #191B1F">
+    <div class="container">
+      <div class="home-spacer"></div>
+      <div class="row">
+        <div class="col-lg-3 home-intro-title">ABOUT <span class="text-nowrap">CG-ASIA</span></div>
+        <div class="home-intro-spacer"></div>
+        <div class="col-lg-8 home-intro-content">Certified Genius Corp (Asia) was founded in August 2016 by Mr. Mario
+          Ho, invested by the US dollar fund SIG Heiner Asia, focusing on providing top-notch Asian competitions and
+          peripheral entertainment services to competitive gamers around the world. Officially authorized by the WSOP
+          since 2018. The first WSOP ASIA will be held in …
+        </div>
+      </div>
+      <div class="row">
+        <div class="home-intro-spacer" style="border: none"></div>
+        <div class="col-lg-3 offset-lg-3" style="margin-top: 30px">
+          <a href="/cg_asia">
+            <%= image_tag 'home/home_know_more.svg' %>
+          </a>
+        </div>
+      </div>
+      <div class="home-spacer"></div>
+      <div class="row">
+        <div class="col-lg-3 home-intro-title">WSOP ASIA</div>
+        <div class="home-intro-spacer"></div>
+        <div class="col-lg-8 home-intro-content">WSOP ASIA is presented by Certified Genius (HK) Limited. With HKD 30
+          million guaranteed prize pool and the world’s best in attendance we are extremely pleased to be hosting such a
+          prestigious event for the first time in Macau, China. There’re a number of iconic hot events, and we also have
+          Asian featured events. Players will be able to compete for high prizes and the gold bracelet that representing
+          the highest glory of WSOP. We ensure that players of all levels can enjoy greatest pleasure in WSOP ASIA.
+        </div>
+      </div>
+      <div class="home-spacer"></div>
+      <div class="home-spacer"></div>
+
+      <div class="row home-jump-items">
+        <div class="col-lg-4 home-jump-item">
+          <%= image_tag 'home/event_zone.jpg' %>
+          <p>EVENT ZONE OF CG-ASIA</p>
+        </div>
+        <div class="col-lg-4 home-jump-item">
+          <%= image_tag 'home/latest_news.jpg' %>
+          <p>LATEST NEWS</p>
+        </div>
+        <div class="col-lg-4 home-jump-item">
+          <%= image_tag 'home/online_poker.png' %>
+          <p>ONLINE POKER</p>
+        </div>
+      </div>
+
+<!--      <ul class="images ">-->
+<!--        <div class="col-lg-4 home-jump-item">-->
+          <%#= image_tag 'home/event_zone.jpg' %>
+<!--          <p>EVENT ZONE OF CG-ASIA</p>-->
+<!--        </div>-->
+<!--        <div class="col-lg-4 home-jump-item">-->
+          <%#= image_tag 'home/latest_news.jpg' %>
+<!--          <p>LATEST NEWS</p>-->
+<!--        </div>-->
+<!--        <div class=" col-lg-4 home-jump-item">-->
+          <%#= image_tag 'home/online_poker.png' %>
+<!--          <p>ONLINE POKER</p>-->
+<!--        </div>-->
+<!--      </ul>-->
+      <div class="home-spacer"></div>
     </div>
   </div>
 </div>
-<div style="background-color: #191B1F">
-  <div class="container">
-    <div class="home-spacer"></div>
-    <div class="row">
-      <div class="col-lg-3 home-intro-title">ABOUT <span class="text-nowrap">CG-ASIA</span></div>
-      <div class="home-intro-spacer"></div>
-      <div class="col-lg-8 home-intro-content">Certified Genius Corp (Asia) was founded in August 2016 by Mr. Mario Ho, invested by the US dollar fund SIG Heiner Asia, focusing on providing top-notch Asian competitions and peripheral entertainment services to competitive gamers around the world. Officially authorized by the WSOP since 2018. The first WSOP ASIA will be held in …
-      </div>
-    </div>
-    <div class="row">
-      <div class="home-intro-spacer" style="border: none"></div>
-      <div class="col-lg-3 offset-lg-3" style="margin-top: 30px">
-        <a href="/cg_asia">
-          <%= image_tag 'home/home_know_more.svg' %>
-        </a>
-      </div>
-    </div>
-    <div class="home-spacer"></div>
-    <div class="row">
-      <div class="col-lg-3 home-intro-title">WSOP ASIA</div>
-      <div class="home-intro-spacer"></div>
-      <div class="col-lg-8 home-intro-content">WSOP ASIA is presented by Certified Genius (HK) Limited. With HKD 30 million guaranteed prize pool and the world’s best in attendance we are extremely pleased to be hosting such a prestigious event for the first time in Macau, China. There’re a number of iconic hot events, and we also have Asian featured events. Players will be able to compete for high prizes and the gold bracelet that representing the highest glory of WSOP. We ensure that players of all levels can enjoy greatest pleasure in WSOP ASIA.
-      </div>
-    </div>
-    <div class="home-spacer"></div>
 
-    <div class="row">
-      <div class="col-lg-4 home-jump-item">
-        <%= image_tag 'home/event_zone.jpg', class: 'img-fluid' %>
-        <p>EVENT ZONE OF CG-ASIA</p>
-      </div>
-      <div class="col-lg-4 home-jump-item">
-        <%= image_tag 'home/latest_news.jpg', class: 'img-fluid' %>
-        <p>LATEST NEWS</p>
-      </div>
-      <div class="col-lg-4 home-jump-item">
-        <%= image_tag 'home/online_poker.png', class: 'img-fluid' %>
-        <p>ONLINE POKER</p>
-      </div>
-      </div>
-    </div>
 
-    <div class="home-spacer"></div>
-  </div>
-</div>
+
 
 
