--- a/app/assets/stylesheets/client/footer.scss
+++ b/app/assets/stylesheets/client/footer.scss
@@ -15,7 +15,7 @@
 }
 
 .footer-item-title{
-  font-size: 20px;
+  font-size: 18px;
   font-family: TwCenMT-Bold;
   font-weight: bold;
   color: rgba(234,234,234,1);
@@ -23,7 +23,7 @@
 
 .footer-item-text {
   margin-top: 10px;
-  font-size: 14px;
+  font-size: 13px;
   font-family: Helvetica-Light;
   font-weight: 300;
   color: rgba(161,161,161,1);
@@ -32,6 +32,7 @@
 .footer-item-img{
   margin-top: -35px;
   margin-left: -30px;
+  max-width: 88%;
 }
 
 .footer-copyright{
