--- a/app/assets/stylesheets/client/header.scss
+++ b/app/assets/stylesheets/client/header.scss
@@ -8,6 +8,7 @@
     font-family: 'Gotham-Medium' !important;
     color:rgba(255,255,255,1) !important;
     font-weight:400 !important;
+    font-size: 17px;
   }
 }
 
@@ -17,7 +18,7 @@
   }
 
   .nav-link-active{
-    width: 10%;
+    width: 7%;
     border: 1.5px solid #FEDD89;
     margin-left: 20px;
     margin-top: -10px;
