--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,7 +35,7 @@
         <div class="home-intro-spacer" style="border: none"></div>
         <div class="col-lg-3 offset-lg-3" style="margin-top: 30px">
           <a href="/cg_asia">
-            <%= image_tag 'home/home_know_more.svg' %>
+            <%= image_tag 'home/home_know_more.svg', class: 'home_know_more' %>
           </a>
         </div>
       </div>
