--- a/app/views/cg_asia/index.html.erb
+++ b/app/views/cg_asia/index.html.erb
@@ -1,4 +1,4 @@
-<div class="cg-asia-bg">
+<div class="cg-asia-bg cg-container">
   <div class="container cg-asia-margin">
     <div class="row cg-asia-item">
       <div class="col-lg-4 cg-asia-title">
