--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="home-container">
+<div class="cg-container">
   <div class="home-navbar-bg">
     <div class="bg-content container">
       <div class="bg-title">CERTIFIED GENIUS CORP(ASIA)</div>
