--- a/app/assets/stylesheets/client/common.scss
+++ b/app/assets/stylesheets/client/common.scss
@@ -1,3 +1,10 @@
+@import "client/vars";
+
+.cg-container .container{
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 .gc-html-container{
   img{
     max-width: 100%;
