--- a/app/assets/stylesheets/client/1st_load_framework.scss
+++ b/app/assets/stylesheets/client/1st_load_framework.scss
@@ -17,3 +17,8 @@
   font-family: "Helvetica-Light";
   src: url(asset-path('helvetica-light.otf'));
 }
+
+@font-face {
+  font-family: "DINCondensed-Bold";
+  src: url(asset-path('din_condensed_blod.ttf'));
+}
