--- a/app/assets/stylesheets/client/online_pokers.scss
+++ b/app/assets/stylesheets/client/online_pokers.scss
@@ -16,7 +16,7 @@
   }
 
   .poker-attrs > div{
-    padding-bottom: 10px;
+    padding-bottom: 5px;
   }
   .online-time{
     font-size: 13px;
@@ -38,7 +38,7 @@
   }
 
   .poker_image img{
-    height: 140px;
+    height: 120px;
   }
   .play-now-container{
     text-align: center;
@@ -46,10 +46,11 @@
   }
   .play-now{
     background:rgba(25,27,31,1);
-    padding: 5px 10px;
+    padding: 5px 10px 2px 10px;
     font-weight:bold;
     color:rgba(255,255,255,1);
     float: right;
+    font-family: DINCondensed-Bold;
   }
 }
 
