--- a/app/views/tournament/_side_event.erb
+++ b/app/views/tournament/_side_event.erb
@@ -8,7 +8,7 @@
         <div class="col-3" style="padding-left: 45px; padding-right: 0">
           <%= side_event.date_time.to_formatted_s(:short) %>
         </div>
-        <div class="col-8">
+        <div class="col-8" style="padding-right: 0px;">
           <div class="name">
             <%= side_event.name %>
             <span class="float-right">
