--- a/app/assets/stylesheets/client/footer.scss
+++ b/app/assets/stylesheets/client/footer.scss
@@ -45,11 +45,12 @@
 
 @media (min-width: $breakpoints-lg) {
   .footer-items {
-    padding-top: 40px;
+    padding-top: 90px;
+    padding-bottom: 60px;
   }
 
   .footer-item-title {
-    font-size: 25px;
+    font-size: 23px;
   }
 
   .footer-item-text {
