--- a/app/assets/stylesheets/client/header.scss
+++ b/app/assets/stylesheets/client/header.scss
@@ -3,7 +3,7 @@
 .navbar-cg{
   padding: 0 !important;
   background-color: #0c0c0c;
-
+  opacity: 0.98;
   .nav-link{
     font-family: 'Gotham-Medium' !important;
     color:rgba(255,255,255,1) !important;
@@ -46,6 +46,10 @@
 
     .navbar-nav-cg{
       padding-right: 60px;
+
+      .btn-language{
+        margin-left: 20px;
+      }
     }
   }
 
@@ -65,6 +69,10 @@
       .nav-item{
         margin-right: 15px;
         margin-left: 15px;
+      }
+
+      .btn-language{
+        margin-left: 30px;
       }
     }
   }
