修改web端的样式

--- a/app/assets/stylesheets/client/cg-asia.scss
+++ b/app/assets/stylesheets/client/cg-asia.scss
@@ -74,9 +74,9 @@
   }
 
   .cg-asia-spacer{
-    width: 100%;
+    width: 220%;
     margin-top: 20px;
-    margin-left: 0;
+    margin-left: -153%;
   }
 
   .cg-asia-avatar-container{
