--- a/app/assets/stylesheets/client/header.scss
+++ b/app/assets/stylesheets/client/header.scss
@@ -39,7 +39,7 @@
 @media (min-width: $breakpoints-lg) {
   .navbar-cg{
     .nav-link-active{
-      width: 50%;
+      width: 31px;
       border: 2px solid #FEDD89;
       margin: 0 auto;
     }
