--- a/app/assets/stylesheets/client/tournament.scss
+++ b/app/assets/stylesheets/client/tournament.scss
@@ -82,6 +82,7 @@
 
 .tour-about-title{
   font-size: 14px;
+  font-family: TwCenMT-Bold;
   font-weight: bold;
   color: rgba(162,162,162,1);
 }
@@ -93,7 +94,7 @@
 }
 
 .tour-description{
-  font-size: 15px;
+  font-size: 16px;
   color:rgba(20,23,28,1);
 }
 
