--- a/app/assets/stylesheets/client/news.scss
+++ b/app/assets/stylesheets/client/news.scss
@@ -59,6 +59,12 @@
     padding-bottom: 40px;
   }
 
+  .new-body{
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
   .media-new{
     background:rgba(255,255,255,1);
     padding: 0;
