--- a/app/assets/stylesheets/client/header.scss
+++ b/app/assets/stylesheets/client/header.scss
@@ -1,5 +1,11 @@
 @import "client/vars";
 
+#navbarNavDropdown{
+  height: fill-available;
+  height: -webkit-fill-available;
+  min-height: 600px;
+}
+
 .navbar-cg{
   padding: 0 !important;
   background-color: #0c0c0c;
@@ -36,7 +42,38 @@
   margin-left: 20px;
 }
 
+#languageDropdown{
+  border:1px solid rgba(161,161,161,1);
+  opacity:0.6152000000000001;
+  padding: 5px 5px 5px 15px !important;
+  width: 120px;
+  margin-left: 20px;
+}
+
+.dropdown-toggle::after{
+  float: right;
+  margin: 9px 9px 0 0;
+}
+
+.cg-dropdown-menu{
+  min-width: auto;
+  width: 120px;
+  margin-left: 20px;
+  padding: 0;
+
+  .dropdown-item{
+    color:rgba(255,255,255,1);
+    padding: 5px 5px 5px 15px;
+    background:rgba(43,44,48,1);
+  }
+}
+
 @media (min-width: $breakpoints-lg) {
+  #navbarNavDropdown{
+    height: auto;
+    min-height: auto;
+  }
+
   .navbar-cg{
     .nav-link-active{
       width: 31px;
