--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,10 +30,10 @@
         <div class="<%= 'nav-link-active' if current_page?('/online_pokers') %>"></div>
       </li>
       <li class="nav-item dropdown btn-language">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%= ENV['CURRENT_LOCALE'] == 'en' ? 'English' : '中文' %>
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="min-width: 0">
+        <div class="dropdown-menu cg-dropdown-menu" aria-labelledby="languageDropdown">
           <% if ENV['CURRENT_LOCALE'] == 'en' %>
             <a class="dropdown-item" href="#">中文</a>
           <% else %>
